k8s/envoy/envoy-gw.yaml
# This could probably be done at a more app level but just leaving it here for simplicity
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api
  namespace: default
spec:
  gatewayClassName: envoy
  infrastructure:
    labels:
      app: envoy-gateway
  
  # Only Routes from the same namespace are allowed.
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All  #or Same or Selector

    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: secret-tls
    #         namespace: default
    #   allowedRoutes:
    #     namespaces:
    #       from: Same
